--- a/dubbo-triple-server/pom.xml
+++ b/dubbo-triple-server/pom.xml
@@ -11,7 +11,10 @@
 
     <artifactId>dubbo-triple-server</artifactId>
     <properties>
-        <dubbo.version>3.0.0.preview</dubbo.version>
+<!--        <dubbo.version>3.0.11</dubbo.version>-->
+<!--        <dubbo.version>3.0.12-SNAPSHOT</dubbo.version>-->
+<!--        <dubbo.version>3.1.0</dubbo.version>-->
+        <dubbo.version>3.1.1-SNAPSHOT</dubbo.version>
     </properties>
 
     <dependencies>
