--- a/benchmark-base/pom.xml
+++ b/benchmark-base/pom.xml
@@ -108,12 +108,12 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>compile-custom</goal>
-                            <goal>test-compile</goal>
-                            <goal>test-compile-custom</goal>
-                        </goals>
+<!--                        <goals>-->
+<!--                            <goal>compile</goal>-->
+<!--                            <goal>compile-custom</goal>-->
+<!--                            <goal>test-compile</goal>-->
+<!--                            <goal>test-compile-custom</goal>-->
+<!--                        </goals>-->
                     </execution>
                 </executions>
             </plugin>
