--- a/dubbo-triple-client/pom.xml
+++ b/dubbo-triple-client/pom.xml
@@ -14,8 +14,11 @@
     <properties>
 <!--        <dubbo.version>3.0.11</dubbo.version>-->
 <!--        <dubbo.version>3.0.12-SNAPSHOT</dubbo.version>-->
-<!--        <dubbo.version>3.1.0</dubbo.version>-->
-        <dubbo.version>3.1.1-SNAPSHOT</dubbo.version>
+<!--        <dubbo.version>3.1.1</dubbo.version>-->
+<!--          <dubbo.version>3.1.2-SNAPSHOT</dubbo.version>-->
+<!--        <dubbo.version>3.2.0-beta.1-SNAPSHOT</dubbo.version>-->
+        <dubbo.version>3.2.0-SNAPSHOT</dubbo.version>
+
     </properties>
 
     <dependencies>
@@ -48,6 +51,7 @@
                 <configuration>
                     <archive>
                         <manifest>
+<!--                            <mainClass>org.apache.dubbo.benchmark.ClientGrpc</mainClass>-->
                             <mainClass>org.apache.dubbo.benchmark.ClientPb</mainClass>
                         </manifest>
                     </archive>
