add gson hession

--- a/dubbo-native-hessian-server/pom.xml
+++ b/dubbo-native-hessian-server/pom.xml
@@ -10,7 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dubbo-native-hessian-server</artifactId>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
@@ -23,10 +22,11 @@
             <groupId>com.caucho</groupId>
             <artifactId>hessian</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.dubbo</groupId>-->
-<!--            <artifactId>dubbo-serialization-native-hession</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.dubbo.extensions</groupId>
+            <artifactId>dubbo-serialization-native-hession</artifactId>
+            <version>${dubbo-serialization-extension.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
